[project]
name = "ComfyUI-PowerLTXLoraLoaderExtra"
description = "Multi-LoRA LTX loader with layer-specific strength control. Supports per-LoRA adjustment of model, video, audio, and cross-attention strengths. Outputs modified model plus JSON metadata of applied LoRAs."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/phazei/ComfyUI-PowerLTXLoraLoaderExtra"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phazei"
DisplayName = "PowerLTXLoraLoaderExtra"
Icon = ""
